--- a/Archivos/2CSS/tabla-precios.html
+++ b/Archivos/2CSS/tabla-precios.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="tabla-precios.css">
 </head>
+
 <body>
-    
-    <section class="container flex text-center">   
+
+    <section class="container flex text-center">
         <div class="columna">
             <h2>Plan Uno</h2>
             <p class="precio">500$</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde commodi aliquam magni expedita ipsum in perspiciatis, aspernatur fugit odit repudiandae illum quas voluptatibus ducimus quis consequatur accusamus dolore omnis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde commodi aliquam magni expedita ipsum
+                in perspiciatis, aspernatur fugit odit repudiandae illum quas voluptatibus ducimus quis consequatur
+                accusamus dolore omnis.</p>
             <hr>
             <p>Lorem, ipsum dolor</p>
             <p>Lorem, ipsum dolor sit amet consectetur</p>
@@ -27,7 +32,9 @@
         <div class="columna">
             <h2>Plan Uno</h2>
             <p class="precio">500$</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde commodi aliquam magni expedita ipsum in perspiciatis, aspernatur fugit odit repudiandae illum quas voluptatibus ducimus quis consequatur accusamus dolore omnis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde commodi aliquam magni expedita ipsum
+                in perspiciatis, aspernatur fugit odit repudiandae illum quas voluptatibus ducimus quis consequatur
+                accusamus dolore omnis.</p>
             <hr>
             <p>Lorem, ipsum dolor</p>
             <p>Lorem, ipsum dolor sit amet consectetur</p>
@@ -40,7 +47,9 @@
         <div class="columna">
             <h2>Plan Uno</h2>
             <p class="precio">500$</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde commodi aliquam magni expedita ipsum in perspiciatis, aspernatur fugit odit repudiandae illum quas voluptatibus ducimus quis consequatur accusamus dolore omnis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde commodi aliquam magni expedita ipsum
+                in perspiciatis, aspernatur fugit odit repudiandae illum quas voluptatibus ducimus quis consequatur
+                accusamus dolore omnis.</p>
             <hr>
             <p>Lorem, ipsum dolor</p>
             <p>Lorem, ipsum dolor sit amet consectetur</p>
@@ -53,7 +62,9 @@
         <div class="columna">
             <h2>Plan Uno</h2>
             <p class="precio">500$</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde commodi aliquam magni expedita ipsum in perspiciatis, aspernatur fugit odit repudiandae illum quas voluptatibus ducimus quis consequatur accusamus dolore omnis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde commodi aliquam magni expedita ipsum
+                in perspiciatis, aspernatur fugit odit repudiandae illum quas voluptatibus ducimus quis consequatur
+                accusamus dolore omnis.</p>
             <hr>
             <p>Lorem, ipsum dolor</p>
             <p>Lorem, ipsum dolor sit amet consectetur</p>
@@ -66,4 +77,5 @@
     </section>
 
 </body>
+
 </html>
